--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "eslint",
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write --print-width=160 --tab-width=2 --no-semi --single-quote --arrow-parens=always \"{./**/*.js,./**/*.jsx}\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +33,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-react": "^7.22.0"
   }
 }
